* Updated front page view * Disabled browser sync for personal convenience (too much CPU usage) * Changed reset.css to Sass fragment ('_reset.scss') and changed location ('/assets/css/reset.css' → '/assets/sass/_reset.scss') Known bugs: #1: Search input and submit button no longer have the same height (possibly line-height or font-size issue)

--- a/assets/sass/_reset.scss
+++ b/assets/sass/_reset.scss
@@ -7,10 +7,10 @@ html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
+small, strike, strong, sub, sup, tt,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend, button
+fieldset, form, input, label, legend, button
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
@@ -22,6 +22,9 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	outline: none !important;
+	box-shadow: none !important;
+	-webkit-appearance: none !important;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
